--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/config";
 
 .select {
+  padding-bottom: 25px;
   :global {
     .MuiFormControl-root {
       width: 100%;
